[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cmseek"
version = "1.1.3"
description = "CMS Detection and Exploitation suite - Scan WordPress, Joomla, Drupal and over 180 other CMSs."
readme = "README.md"
requires-python = ">=3.6"
license = { text = "GPL-3.0-or-later" }

authors = [
    { name = "Tuhin Shubhra", email = "contactr3d@protonmail.com" }
]

dependencies = [
    "requests"
]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[project.urls]
Homepage = "https://github.com/Tuhinshubhra/CMSeeK"

[project.scripts]
cmseek = "cmseek:main"

[tool.setuptools]
include-package-data = true
py-modules = ["cmseek"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "cmsbrute*",
    "cmseekdb*",
    "deepscans*",
    "VersionDetect*"
]

[tool.setuptools.package-data]
cmsbrute = ["*.json"]
deepscans = ["**/*.txt"]
VersionDetect = ["**/*.txt"]
cmseekdb = ["**/*.txt"]

[tool.setuptools.data-files]
wordlist = ["wordlist/passwords.txt"]